# InstructTakeHomeTask

./: .env  Dockerfile  README.md  main.py  pyproject.toml  settings.py
auth/: dependencies.py
scraping/: constants.py  models.py  router.py
scraping/services/: openai_service.py  scraping_service.py
tests/: conftest.py
tests/fixtures/: nico-ditch.html
tests/scraping/routes/: test_ask_route.py  test_scraping_route.py
tests/scraping/services/: test_openapi_service.py  test_scraping_service.py
